--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "NCC Company CMS",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node -r esm server.js",
+    "dev": "nodemon -r esm server.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,12 @@
   },
   "homepage": "https://github.com/newchemical/NCC_Console#readme",
   "dependencies": {
+    "dotenv": "^16.3.1",
+    "esm": "^3.2.25",
     "express": "^4.18.2",
+    "generate-password": "^1.7.0",
+    "joi": "^17.10.1",
+    "mongodb": "^6.0.0",
     "nodemon": "^3.0.1"
   }
 }
